# GoogleTest-basic

./: .gitignore  CMakeLists.txt
src/: calculator.cpp  calculator.h
tests/: CMakeLists.txt  calculator_tests.cpp  structure_examples.cpp
